objects/CQS_SocietaServices__c.object
<CustomObject>
    <fields>
        <fullName>CQS_SS_NomeSoc__c</fullName>
        <label>Ragione Sociale Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_SS_Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQS_SS_PartitaIVA__c</fullName>
        <label>Partita IVA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Società Services</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CQS_SS_NomeSoc__c</columns>
        <columns>CQS_SS_PartitaIVA__c</columns>
        <columns>CQS_SS_Note__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Società Services Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Società Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>